# AIBOT

./: .dockerignore  .env.example  .env.rds.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.ec2-small.yml  docker-compose.rds.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/rules/: aibottrade-context.mdc
.github/workflows/: ci.yml  deploy-ec2.yml  retrain-ai.yml
ai/: __init__.py  features.py  filter.py  model.py  storage.py  trainer.py
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_account_id.py
api/: __init__.py  app.py
api/routes/: accounts.py  ai.py  controls.py  leverage.py  logs.py  market.py  performance.py  positions.py  risk.py  signals.py  strategies.py  test_session.py  trades.py
api/schemas/: __init__.py  models.py
backtest/: __init__.py  charts.py  engine.py  metrics.py
config/: default.yaml
core/: __init__.py  account_manager.py  account_runtime.py  bot.py  engine.py  main.py  paper_trader.py  state.py
dashboard/frontend/: next.config.js  package-lock.json  package.json
dashboard/frontend/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
dashboard/frontend/src/components/: AccountDashboardPanel.tsx  AccountPanel.tsx  BotControls.tsx  Card.tsx  ClosePositionButton.tsx  EquityChart.tsx  LeverageSettingsPanel.tsx  ManualTradePanel.tsx  OpenPositionsTable.tsx  RiskGuideModal.tsx  RiskSettingsPanel.tsx  StrategySettingsPanel.tsx  TestModePanel.tsx  TradingChart.tsx  TradingViewChart.tsx
dashboard/frontend/src/lib/: api.ts  riskFieldHelp.ts  strategyFieldHelp.ts  timezone.ts  tradingview.ts
database/: __init__.py  models.py  schema_upgrade.py  session.py
database/repositories/: __init__.py  accounts.py  candles.py  signals.py  trades.py
docker/: entrypoint.sh
docs/: RISK_PROTECTION.md
exchange/: __init__.py  base.py  binance_futures.py  market_data.py  rate_limiter.py  websocket_manager.py
indicators/: __init__.py  base.py  momentum.py  support_resistance.py  trend.py  volatility.py  volume.py
notifications/: __init__.py  telegram.py
risk/: __init__.py  manager.py  position_sizer.py  sr_stops.py  stops.py
scripts/: ec2-deploy-small.sh  ec2-deploy-update.sh  ec2-fix-and-run.sh  ec2-restart-dashboard.sh  ec2-retrain-ai.sh  ec2-start-dashboard.sh
strategies/: __init__.py  base.py  breakout.py  ema_cross_rsi.py  mean_reversion.py  registry.py  scalping.py  trend_following.py
tests/: conftest.py  test_backtest.py  test_config.py  test_exchange_sl_tp.py  test_indicators.py  test_leverage_settings.py  test_min_notional.py  test_risk.py  test_sr_stops.py  test_strategies.py
utils/: __init__.py  config.py  helpers.py  leverage_settings.py  logger.py  risk_settings.py  strategy_settings.py  test_session.py
