[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aibottrade"
version = "1.0.0"
description = "Production-ready Binance Futures trading bot with strategies, backtesting, and dashboard"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "AIBotTrade Team" }]
keywords = ["trading", "binance", "futures", "cryptocurrency", "algorithmic-trading"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "aiohttp>=3.9.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-binance>=1.0.19",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "structlog>=24.1.0",
    "ta>=0.11.0",
    "uvicorn[standard]>=0.27.0",
    "fastapi>=0.110.0",
    "websockets>=12.0",
    "matplotlib>=3.8.0",
    "plotly>=5.19.0",
    "joblib>=1.3.0",
    "python-telegram-bot>=21.0",
    "tenacity>=8.2.0",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.2.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "types-pyyaml>=6.0.12",
    "types-requests>=2.31.0",
    "httpx>=0.27.0",
    "faker>=24.0.0",
]

[project.scripts]
aibottrade = "core.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "api*",
    "core*",
    "exchange*",
    "strategies*",
    "indicators*",
    "risk*",
    "ai*",
    "backtest*",
    "dashboard*",
    "database*",
    "notifications*",
    "utils*",
]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.ruff_cache
    | \.venv
    | venv
    | build
    | dist
    | dashboard/frontend
    | alembic/versions
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "build",
    "dist",
    "dashboard/frontend",
    "alembic/versions",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # pylint
    "RUF", # ruff-specific
]
ignore = [
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "ARG002",  # unused method argument (common in interfaces)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "PLR2004", "S101"]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = [
    "api",
    "core",
    "exchange",
    "strategies",
    "indicators",
    "risk",
    "ai",
    "backtest",
    "dashboard",
    "database",
    "notifications",
    "utils",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "binance.*",
    "ta.*",
    "sklearn.*",
    "matplotlib.*",
    "plotly.*",
    "telegram.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=core",
    "--cov=exchange",
    "--cov=strategies",
    "--cov=indicators",
    "--cov=risk",
    "--cov=ai",
    "--cov=backtest",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring external services",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = [
    "api",
    "core",
    "exchange",
    "strategies",
    "indicators",
    "risk",
    "ai",
    "backtest",
    "database",
    "notifications",
    "utils",
]
omit = [
    "tests/*",
    "*/__init__.py",
    "dashboard/frontend/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
